--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página de vendas</h1>
+    <p>vendas=5milreais</p>
     <a href="index.html">Ir para a página de vendas</a>
 
 </body>
